--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -159,7 +159,7 @@
     <string name="n_pkts">%1$s pakker</string>
     <string name="private_dns_hinders_detection">Privat DNS forhindrer oppdagelse</string>
     <string name="decryption_no_filter_warn">Velg et målprogram når du dekrypterer TLS for å unngå å miste tilkoblingen din til Internett</string>
-    <string name="billing_failure">Kunne ikke koble til Google Play. Prøv igjen om en stund.</string>
+    <string name="billing_failure">Kunne ikke koble til Google Play. Prøv igjen om en stund</string>
     <string name="start_capture_first">Start opptak først</string>
     <string name="close_nav_drawer">Lukk skuff</string>
     <string name="save_ok">Lagret</string>
@@ -189,7 +189,7 @@
     <string name="root_capture">Fangst med rot-tilgang</string>
     <string name="pcapdroid_trailer">PCAPdroid-trailer</string>
     <string name="ctrl_consent">Et program vil fane din enhetstrafikk.
-\nNekt det hvis du ikke er sikker.</string>
+\nNekt det hvis du ikke er sikker</string>
     <string name="trailer_how_to">Hvordan vise trailer-data i Wireshark</string>
     <string name="malware_whitelist_rules">Skadevare-hvitlisteregler</string>
     <string name="malware_detection_summary">Oppdag tilkoblinger til kjente ondsinnede verter via tredjeparts-svartelister</string>
@@ -219,6 +219,6 @@
     <string name="capturing_from">Fanger pakker fra «%1$s»</string>
     <string name="capture_interface">Fangstgrensesnitt</string>
     <string name="no_dump_info">PCAP vil ikke bli registrert</string>
-    <string name="malware_whitelist_help">Brukerdefinert hvitliste for å unngå skadevareoppdatelse. Lang-trykk på ondsinnede tilkoblinger for å opprette regler som avmarkerer dem som skadevare.</string>
+    <string name="malware_whitelist_help">Brukerdefinert hvitliste for å unngå skadevareoppdatelse. Lang-trykk på ondsinnede tilkoblinger for å opprette regler som avmarkerer dem som skadevare</string>
     <string name="start_at_boot_summary">Starter opptak sammen med enheten</string>
 </resources>
