--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -222,7 +222,7 @@
     <string name="socks5_info">SOCKS5 vekili: %1$s:%2$d</string>
     <string name="unblock">Engeli kaldır…</string>
     <string name="tls_decryption">TLS şifre çözme</string>
-    <string name="tls_decryption_starting">TLS şifre çözme başlıyor</string>
+    <string name="tls_decryption_starting">TLS şifre çözme başlıyor…</string>
     <string name="mitm_setup_wizard">Ortadaki adam kurulum sihirbazı</string>
     <string name="install_action">Kur</string>
     <string name="install_mitm_addon">PCAPdroid ortadaki adam eklentisini kur</string>
