--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -269,7 +269,7 @@
     <string name="cert_installed_correctly">CA 证书已安装</string>
     <string name="cert_reinstall_required">CA 证书未安装，运行 mitim 设置向导</string>
     <string name="mitm_addon_bad_version">PCAPdroid mitm 附加组件版本号不对。卸载它并重试</string>
-    <string name="mitm_addon_new_version">必须升级 PCAPdroid 插件</string>
+    <string name="mitm_addon_new_version">必须升级 PCAPdroid mitm 附加组件</string>
     <string name="upgrade_action">升级</string>
     <string name="export_failed">导出失败</string>
     <string name="not_encrypted">未加密</string>
